<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="org.batnet.MainActivity">

    <TextView
            android:id="@+id/MESSAGE_TEXT_VIEW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HASHTAGS"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>

    <Button
            android:text="@string/send_signal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/IMPULSE_TEST_SEND_BUTTON"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"/>

    <Button
            android:text="@string/send_16_signals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/SEND_16_SIGNALS"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/IMPULSE_TEST_SEND_BUTTON"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>


    <Button
            android:text="@string/pause_recording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/START_RECORDING_BUTTON"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/IMPULSE_TEST_SEND_BUTTON"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>

    <Button
            android:text="@string/open_chatkit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/OPEN_CHATKIT_BUTTON"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/START_RECORDING_BUTTON"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            />

    <Button
            android:text="Play Calibration Sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/PLAY_CALIB_BUTTON"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/OPEN_CHATKIT_BUTTON"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>

    <Button
            android:text="Receive Calibration sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/RECEIVE_CALIB_BUTTON"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/PLAY_CALIB_BUTTON"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>

    <Button
			android:text="@string/START_JAMMING"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TOGGLE_JAMMING_BUTTON"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/RECEIVE_CALIB_BUTTON"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>

    <Spinner
            android:id="@+id/FREQUENCY_SPINNER"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/TOGGLE_JAMMING_BUTTON"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>

    <Spinner
            android:id="@+id/SYMBOL_LENGTH_SPINNER"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/TOGGLE_JAMMING_BUTTON"
			app:layout_constraintStart_toEndOf="@+id/FREQUENCY_SPINNER"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>

    <Button
            android:text="Update distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/DISTANCE_UPDATE_BUTTON"
            app:layout_constraintStart_toEndOf="@+id/DISTANCE_INPUT"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/DISTANCE_INPUT"
            />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/DISTANCE_INPUT"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/FREQUENCY_SPINNER"/>
</android.support.constraint.ConstraintLayout>
